feat: allow account deletion and add email verification

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,2 +1,8 @@
+BASE_URL=http://localhost:8080
 DATABASE_URL=postgres://postgres:password@localhost:5432/auth?sslmode=disable
 JWT_SECRET=your-secure-secret-key
+SMTP_HOST=smtp.yourdomain.com
+SMTP_PORT=587
+SMTP_USER=your-email@yourdomain.com
+SMTP_PASS=your-secure-password
+SMTP_FROM=your-email@yourdomain.com
