--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "go build main.go",
-    "dev": "go run main.go"
+    "dev": "go run main.go",
+    "generate:grpc": "protoc --proto_path=proto --go_out=. --go-grpc_out=. proto/v1.proto"
   }
 }
