--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "turbo lint",
     "type-check": "turbo type-check",
     "clean": "turbo clean",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "generate:grpc": "protoc --proto_path=proto --go_out=apps/backend --go-grpc_out=apps/backend proto/v1.proto"
   },
   "devDependencies": {
     "prettier": "^3.2.5",
