--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,6 +1,11 @@
 BASE_URL=http://localhost:8080
 DATABASE_URL=postgres://postgres:password@localhost:5432/auth?sslmode=disable
+# Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
 JWT_SECRET=your-secure-secret-key
+
 SMTP_HOST=smtp.yourdomain.com
 SMTP_PORT=587
 SMTP_USER=your-email@yourdomain.com
