--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,8 +10,11 @@ services:
       - "8080:8080"
     environment:
       - DATABASE_URL=${DATABASE_URL}
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     depends_on:
       - db
+      - redis
 
   db:
     image: postgres:15
@@ -24,6 +27,14 @@ services:
       - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
+
+  redis:
+    image: redis:6.2
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
 
   frontend:
     build:
@@ -39,3 +50,4 @@ services:
 
 volumes:
   db_data:
+  redis_data:
