feat: start adding frontend routes for login and registration

--- a/packages/config-tailwind/tsconfig.lint.json
+++ b/packages/config-tailwind/tsconfig.lint.json
@@ -1,5 +1,5 @@
 {
   "extends": "@authentication-service-go/typescript-config/base.json",
-  "include": ["."],
+  "include": ["tailwind.config.ts"],
   "exclude": ["dist", "build", "node_modules"]
 }
