--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,22 +10,24 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@repo/ui": "*",
+    "@authentication-service-go/ui": "workspace:*",
+    "@authentication-service-go/utils": "workspace:*",
     "next": "^14.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.0"
   },
   "devDependencies": {
+    "@authentication-service-go/eslint-config": "workspace:*",
+    "@authentication-service-go/tailwind-config": "workspace:*",
+    "@authentication-service-go/typescript-config": "workspace:*",
     "@next/eslint-plugin-next": "^14.2.3",
-    "@repo/eslint-config": "*",
-    "@repo/tailwind-config": "*",
-    "@repo/typescript-config": "*",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.16",
     "typescript": "5.5.4"
   }
 }
