--- a/package.json
+++ b/package.json
@@ -17,12 +17,8 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "turbo": "^2.3.3"
   },
+  "packageManager": "pnpm@8.15.6",
   "engines": {
     "node": ">=18"
-  },
-  "packageManager": "bun@1.0.0",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ]
+  }
 }
