--- a/packages/config-eslint/package.json
+++ b/packages/config-eslint/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/eslint-config",
+  "name": "@authentication-service-go/eslint-config",
   "version": "0.0.0",
   "private": true,
   "devDependencies": {
