--- a/packages/config-tailwind/package.json
+++ b/packages/config-tailwind/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "@repo/tailwind-config",
+  "name": "@authentication-service-go/tailwind-config",
   "version": "0.0.0",
   "private": true,
   "exports": {
     ".": "./tailwind.config.ts"
   },
   "devDependencies": {
-    "@repo/typescript-config": "*",
-    "tailwindcss": "^3.4.1"
+    "@authentication-service-go/typescript-config": "workspace:*",
+    "@types/node": "^22.1.0",
+    "tailwindcss": "^3.4.16",
+    "typescript": "^5.3.3"
   }
 }
