--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/ui",
+  "name": "@authentication-service-go/ui",
   "version": "0.0.0",
   "sideEffects": [
     "**/*.css"
@@ -9,7 +9,7 @@
   ],
   "exports": {
     "./styles.css": "./dist/index.css",
-    "./card": "./src/card.tsx"
+    "./Cards": "./src/Cards/index.ts"
   },
   "license": "MIT",
   "scripts": {
@@ -19,16 +19,21 @@
     "type-check": "tsc --noEmit"
   },
   "peerDependencies": {
-    "react": "^18.2.0"
+    "react": "^18.3.1"
+  },
+  "dependencies": {
+    "@authentication-service-go/utils": "workspace:*"
   },
   "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/tailwind-config": "*",
-    "@repo/typescript-config": "*",
+    "@authentication-service-go/eslint-config": "workspace:*",
+    "@authentication-service-go/tailwind-config": "workspace:*",
+    "@authentication-service-go/typescript-config": "workspace:*",
+    "@types/node": "^22.1.0",
+    "@turbo/gen": "^1.12.4",
     "@types/react": "^18.2.61",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.16",
     "typescript": "5.5.4"
   }
 }
