--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,4 +1,5 @@
 BASE_URL=http://localhost:8080
+BASE_URL_WEB=http://localhost:3000
 DATABASE_URL=postgres://postgres:password@localhost:5432/auth?sslmode=disable
 # Redis
 REDIS_HOST=localhost
